fix: ui improvements  (#327)
* fix: kanban board header scroll fix

* style: enable scrollbar style added

* fix: emoji picker overflow

* fix: delete project modal text overflow

* fix: cycle card ellipsis

* fix: tooltip position updated and custom class added

* fix: assignees tooltip overflow

* fix: module card

* fix: my issue page  tooltip and responsive title  added

* fix: home page tooltip and responsiveness

--- a/apps/app/styles/globals.css
+++ b/apps/app/styles/globals.css
@@ -23,6 +23,10 @@
   -webkit-font-smoothing: antialiased;
 }
 
+.scrollbar-enable::-webkit-scrollbar {
+  display: block ;
+}
+
 /* Scrollbar style */
 ::-webkit-scrollbar {
   display: none;
